# whatsapp-chat-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/ai/: agent.py  llm_client.py  prompts.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  conversations.py  health.py  knowledge.py  products.py  settings.py  users.py  webhook.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  security.py
backend/app/integrations/aisensy/: client.py  webhook_handler.py
backend/app/knowledge/: chunker.py  embedder.py  ingestion.py  parser.py  retriever.py
backend/app/models/: __init__.py  ai_run.py  audit.py  base.py  contact.py  conversation.py  knowledge.py  lead.py  product.py  user.py
backend/app/schemas/: analytics.py  auth.py  conversation.py  knowledge.py  product.py  settings.py  user.py  webhook.py
backend/app/services/: analytics_service.py  audit_service.py  auth_service.py  conversation_service.py  product_service.py
backend/app/tasks/: celery_app.py  knowledge_tasks.py  messaging_tasks.py
backend/app/tests/: conftest.py
backend/app/tests/fixtures/: webhook_payloads.py
backend/app/tests/unit/: test_auth.py  test_chunker.py  test_health.py  test_webhook.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: seed.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  (+1 more)
(+23 files in other folders)
