[project]
name = "whatsapp-chat-agent"
version = "0.1.0"
description = "AI WhatsApp Chat Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "httpx>=0.27.0",
    "pgvector>=0.2.4",
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
